# hpc

./: .gitignore  README.md
lesson02/: CMakeLists.txt  GDB_的使用.pdf:Zone.Identifier  Makefile  README.md  mul_test_all.py  results.txt
lesson02/docs/: gcc 使用和矩阵乘法性能比较 b9e3e2ef8c954cd0b07ce8df4d225a37.md
lesson02/src/: mat.c  mat.h
lesson03/: README.md
lesson03/data/: index.html.2.1  wget-log  wget-log.1  wget-log.2  wget-log.3
lesson03/src/: process_demo.c  socket_server_demo  socket_server_demo.c  socket_server_multiprocessing  socket_server_multiprocessing.c
lesson04/: README.md
lesson04/src/: run.sh  thread_demo_single_var  thread_demo_single_var_s1.c
lesson04/src_http/: run.sh  socket_server_threads  socket_server_threads.c  test.txt  thread_demo_single_var.c  thread_demo_single_var_s1
lesson04/src_mat/: CMakeLists.txt  Linux_环境多线程编程.pdf:Zone.Identifier  Makefile  mul_test_all.py  results.txt  sse_test  sse_test.c
lesson04/src_mat/build_mkfile/: mat.i  mat.s  mat_mul_test  mat_mul_test.i  mat_mul_test.s  results.txt
lesson04/src_mat/docs/: Linux 环境多线程编程 6d25302e391241f5ba4734720fc1d3e9.md
lesson04/src_mat/src/: mat.c  mat.h  mat_mul_test.c  utils.h
lesson05/: .gitignore  CMakeLists.txt  README.md  mul_test_all.py  openmp_demo.cpp  openmp_demo2  openmp_demo_for  openmp_demo_for.cpp  requirements.txt  test_openmp.sh
lesson05/docs/: OpenMP 初试 da6bdc1cb8b449ebbb22aaf57028f5c6.md
lesson05/src/: mat.c  mat.h  mat_mul_test.c  utils.c
lesson05/src_mat/: mul_test_all.py  openmp_demo  openmp_demo.cpp  results.txt
lesson05/src_mat/docs/: OpenMP初试 da6bdc1cb8b449ebbb22aaf57028f5c6.md
lesson05/src_mat/src/: mat.c  mat.h  mat_mul_test.c  utils.h
lesson06/: CMakeLists.txt  Makefile  README.md  mpi_demo.c  mul_test_all.py
lesson06/docs/: MPI 实验 bda7c64d295e4f2d93795c57df6375ad.md  OpenMP 初试 da6bdc1cb8b449ebbb22aaf57028f5c6.md
lesson06/src/: mat.c  mat.h  mat_mul_test.c  task.c  task.h  utils.h
lesson07/: 应用：HPL实验 8d13a3f44b784002834e6e908442ea31.md
lesson07/batch/: nohup.out  result_256.json  result_256_to_512.json  result_64_to_256.json  result_N_16000_28000.json  result_N_30000_50000.json  result_P_Q.json  result_n28_P2_Q7.json  test.py  xhpl
实验一： linux操作系统与shell命令/: 简单的 Linux 烹饪指南 4cc52c272d954e44bed4e4a7c1e6af3a.md
